[package]
name = "stable-alloc-shim"
version = "0.57.0"
edition = "2018"
authors = ["Orson Peters <orsonpeters@gmail.com>"]
description = "Stable shims for the Allocator API"
license = "MIT/Apache-2.0"
repository = "https://github.com/orlp/stable-alloc-shim"
readme = "README.md"
keywords = ["allocator", "api"]
categories = ["memory-management"]
